# KTN12

./: .gitignore  Cargo.toml  DEPLOYMENT_STATUS.sh  README.md  TECHNICAL_TESTS.md  TN12_SPEC.md  check_config.sh  check_status.sh  claim_tx.json  config.env.example  deadman.sil  deadman_args.json  deadman_claim.js  deadman_claim.py  deadman_claim_simple.js  deadman_claim_v3.py  deadman_claim_wasm.py  deadman_switch_transaction.js  deadman_test.json  demo_deployment.sh  deploy_contract.sh  deploy_live.sh  deploy_p2pkh_live.sh  hodl_vault_args.json  kaspa-graffiti-cli  kaspa-miner  mecenas_args.json  package-lock.json  package.json  quickref.sh  send-grpc.js  send-kas-exact.js  send-kas-wallet.js  send-rothschild.js  send-tx-exact.py  send-tx.py  session-feb21.md  setup_deployment.sh  start_node.sh  start_rk_node.sh  (+15 more)
backups/20260228_193015/: deadman_claim.py  index.html  server.js
dashboard-tn12/: config.js  controlpanel.html  deadman2_claim.js  deadman_claim.js  deadman_claim_simple.js  deadman_claim_v2.js  index.html  index.html.backup  package-lock.json  package.json  server.js  test_wasm.js
dashboard-tn12/scripts/: generate_p2sh_address.py  kaspa_wallet.py
docs/: README2.md  SESSION_BACKUP.md  Thinking: Now I'll create the full dashb.css
guardian/: api.js  auto-lawyer.js  config.json  heartbeat.json
kaspa-igra-cli/src/: commands.rs  main.rs
kaspa-igra-cli/src-ui/: package-lock.json  server.cjs
kaspa-igra-cli/src/rpc/: client.rs  mod.rs
kaspa-igra-cli/src/wallet/: address.rs
kaspa-send/: Cargo.toml
kaspa-send/src/: main.rs
silverscript-lang/tests/: examples_tests.rs
silverscript-lang/tests/examples/: deadman2.json  deadman2.sil
wallet-cli/: Cargo.toml
wallet-cli/src/: lib.rs  main.rs
