[workspace]
members = ["wallet-cli", "silverscript-lang"]
resolver = "2"

# Silverscript compiler - uses covpp-reset1 branch for covenants
# Build separately: cargo build -p silverscript-lang -p kaspa-covenant-sdk

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Kaspa developers"]
repository = ""
rust-version = "1.85.0"

[workspace.dependencies]
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
kaspa-txscript-errors = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
blake2b_simd = "1.0.2"
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = [
    "global-context",
    "rand-std",
    "serde",
] }
thiserror = "1.0.61"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
async-trait = "0.1"

kaspa-wallet-core = "0.15"
kaspa-wallet-keys = "0.15"
kaspa-wallet-pskt = "0.15"
kaspa-wrpc-client = "0.15"
kaspa-rpc-core = "0.15"
