[package]
name = "kaspa-send"
version = "0.1.0"
edition = "2021"

[dependencies]
kaspa-wrpc-client = "0.15"
kaspa-rpc-core = "0.15"
kaspa-addresses = "0.15"
kaspa-hashes = "0.15"
kaspa-txscript = "0.15"
secp256k1 = { version = "0.29", features = ["std", "rand-std"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "kaspa-send"
path = "src/main.rs"
